# TheHumanPangenome

./: .gitignore  LICENSE  README.md
DS/: README.md  cactus_panApe_chr21_config.txt  generate_paths.py  gfa.py
DS/example_retro-compatible_coordinate/: 1.gfa
DS/scripts/: generate_paths.py  gfa.py  maf_to_gfa1.py  seqwish.sh
DS/test/: 1.expected.paths  1.gfa  2.expected.paths  2.gfa
Giraffe/: README.md  index-1.html
Giraffe/scripts/: maize_test_pipeline_commands.txt  run_script.sh
Haplo/: README.md
MHC/: README.md  download-and-mapping.md  error-correction.sh  phasing-notes.md
MHC/assembly/: FastaReader.py  README  setup.sh
MHC/benchmark_variant_call/: benchmark.tgz
MHC/benchmark_variant_callset/: HG002_MHCdiploidassembly_GRCh37_v1.0.bed  HG002_MHCdiploidassembly_GRCh37_v1.0.vcf.gz.tbi
MHC/e2e_notebooks/: 00_fetchreads.ipynb  00_get_phased_reads.ipynb  01_get_phased_reads.ipynb  01_get_reads_mapped_to_assembly.ipynb  02_run_assembler.ipynb  02_run_assembler_2.ipynb  03_MHC_Analysis_00_GRCh37_2.ipynb  03_get_variant_cluster.ipynb  04_get_variant_cluster.ipynb  X00_Shimmer_genome_align_hg002-MHC.ipynb  X01_HLA-Typing-from-Assmbly.ipynb  var_H1_2.vcf  var_H2_2.vcf
RNA/: README.md
RNA/wdl_pipeline/: vg_rna.inputs.json  vg_rna.wdl
SV/: README.md
SV/HG002/: README.md  alignCalledInsertions.R  callVariantsInInsertedSeq.R  dummy-compare.R  filterInternalVariants.R  hg002-allVsRegionalDownsampling.Rmd  hg002-allVsRegionalDownsampling.md  install-dependencies.sh  trace.sh  venn-indels-all-regional.tiff  venn-snps-all-regional.tiff
Tools3/: Flowchart.md  README.md
Tools3.5/: Flowchart.md  README.md
Tools4/: README.md  README.md~
annotation/: README.md
annotation/ggfftools/: .gitignore  CMakeLists.txt  README.md  ggff.cc  ggff.h  ggff.proto  main.cc
annotation/ggfftools/cmake/: defaults.cmake  external.cmake
annotation/ggfftools/scripts/: configure.sh
cloud-info/: cloud-cheat-sheet.md  data-sources.md  user-stories.md
general-info/: GraphThoughts_Schneider.pptx  README.md
plants/: README.md
vg_wdl/: README.md
(+128 files in other folders)
